Download as zip support #202
